--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   cursor: none; /* Esconde o cursor padrão */
+  font-family: 'Inter';
 }
 
 * {
