--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,11 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
@@ -43,4 +48,29 @@ a, button, input, textarea, select, [role="button"] {
 
 .nav-link:hover {
   color: white;
+  transform: scale(1.05);
+}
+
+.container {
+margin-left: 50px;
+margin-right: 15px;
+}
+
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2d2d2d;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #777;
 }
